HTML and css ok.

--- a/recommender_app/templates/recommender_app/index.html
+++ b/recommender_app/templates/recommender_app/index.html
@@ -1,1 +1,57 @@
-<h1>Hallo</h1>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+      <!-- Style -->
+      {% load staticfiles %}
+    <link href="{% static 'recommender_app/css/style.css' %}" rel="stylesheet">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <title>Music Recommender</title>
+  </head>
+  <body>
+
+    <section class="container-fluid" id="main">
+        <div id="main-content">
+            <h1>Artist Recommender</h1>
+            <div class="row">
+                <div class="col-2">
+                </div>
+                <div class="col-8">
+                    <form action="" id="search">
+                    <input type="search" class="form-control-lgc" placeholder="Who's your favorite artist?">
+                    <button class="btn btn-dark">Go!</button>
+                </form>
+                </div>
+                <div class="col-2">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-2">
+                </div>
+                <div class="col-8">
+                    <ul class="list-group" id="recommendations-list">
+                      <li class="list-group-item">First item</li>
+                      <li class="list-group-item">Second item</li>
+                      <li class="list-group-item">Third item</li>
+                    </ul>
+                </div>
+                <div class="col-2">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="{% static 'recommender_app/js/script.js' %}"></script>
+  </body>
+</html>
