Added js, css, html for startpage. Added first function for REST-service plus test.

--- a/recommender_app/templates/recommender_app/index.html
+++ b/recommender_app/templates/recommender_app/index.html
@@ -23,25 +23,27 @@
                 <div class="col-2">
                 </div>
                 <div class="col-8">
-                    <form action="" id="search">
-                    <input type="search" class="form-control-lgc" placeholder="Who's your favorite artist?">
-                    <button class="btn btn-dark">Go!</button>
+                    <form action="" id="search" method="post">
+                        {% csrf_token %}
+                    <input type="search" class="form-control-lgc" placeholder="Who's your favorite artist?"
+                           response-url="{% url 'predictartist' %}" id="inputartist">
+                    <button class="btn btn-dark" id="submit">Go!</button>
                 </form>
                 </div>
                 <div class="col-2">
                 </div>
             </div>
             <div class="row">
-                <div class="col-2">
+                <div class="col-3">
                 </div>
-                <div class="col-8">
+                <div class="col-6">
                     <ul class="list-group" id="recommendations-list">
                       <li class="list-group-item">First item</li>
                       <li class="list-group-item">Second item</li>
                       <li class="list-group-item">Third item</li>
                     </ul>
                 </div>
-                <div class="col-2">
+                <div class="col-3">
                 </div>
             </div>
         </div>
@@ -49,9 +51,10 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="{% static 'recommender_app/js/script.js' %}"></script>
+
   </body>
 </html>
