--- a/recommender_app/templates/recommender_app/index.html
+++ b/recommender_app/templates/recommender_app/index.html
@@ -20,9 +20,9 @@
         <div id="main-content">
             <h1>Artist Recommender</h1>
             <div class="row">
-                <div class="col-2">
+                <div class="col-md-1 col-lg-2">
                 </div>
-                <div class="col-8">
+                <div class="col-md-10 col-lg-8">
                     <form action="" id="search" method="post">
                         {% csrf_token %}
                     <input type="search" class="form-control-lgc" placeholder="Who's your favorite artist?"
@@ -30,17 +30,17 @@
                     <button class="btn btn-dark" id="submit">Go!</button>
                 </form>
                 </div>
-                <div class="col-2">
+                <div class="col-md-1 col-lg-2">
                 </div>
             </div>
             <div class="row">
-                <div class="col-3">
+                <div class="col-md-0 col-lg-3">
                 </div>
-                <div class="col-6">
+                <div class="col-md-12 col-lg-6">
                     <ul class="list-group" id="recommendations-list">
                     </ul>
                 </div>
-                <div class="col-3">
+                <div class="col-md-0 col-lg-3">
                 </div>
             </div>
         </div>
